--- a/E02-列表和数组/02-01.md
+++ b/E02-列表和数组/02-01.md
@@ -1,39 +1,119 @@
-1. 切片  
-   正常接片:
+[1. 切片](#1)  
+[2. 成员资格](#2): in  
+[3. 长度，最小值和最大值](#3):   
+>函数：len() min()  max()     
+> 
+[4. 函数list](#4):
+> 函数：def, reversed, sorted  
+> 方法: append, clear, copy, count, extend, index, insert, pop, remove, reverse, sort
+
+## <div id="1">1. 切片</div>
+
    ```python
-   number=[1,2,3,4,5,6,7,8,9,10]
-   
-   #正常切片
-   number[3:6]      
-   [4, 5, 6]
-   
-   #最后3位
-   number[-3:]      
-   [8, 9, 10]
-   
-   #所有值
-   number[:]        
-   [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]  
-   
-   #第x+1位到倒数y+1位，第4位到倒数第3位
-   number[3:-2]     
-   [4, 5, 6, 7, 8]
-   
-   #设置步长，例如：2
-   number[0:10:2]
-   [1, 3, 5, 7, 9]
-   
-   # 倒序：第一位必须大于第二位，步长位负数
-   number[9:2:-3]
-   [10, 7, 4]
-   
-   #初始位置，结束位置可以为空
-   number[9::-3]
-   [10, 7, 4, 1]
-   
-   number[::3]
-   [1, 4, 7, 10]
-   
-   number[:8:3]
-   [1, 4, 7]
+   number = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+
+# 正常切片
+number[3:6]
+[4, 5, 6]
+
+# 最后3位
+number[-3:]
+[8, 9, 10]
+
+# 所有值
+number[:]
+[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+
+# 第x+1位到倒数y+1位，第4位到倒数第3位
+number[3:-2]
+[4, 5, 6, 7, 8]
+
+# 设置步长，例如：2
+number[0:10:2]
+[1, 3, 5, 7, 9]
+
+# 倒序：第一位必须大于第二位，步长位负数
+number[9:2:-3]
+[10, 7, 4]
+
+# 初始位置，结束位置可以为空
+number[9::-3]
+[10, 7, 4, 1]
+
+number[::3]
+[1, 4, 7, 10]
+
+number[:8:3]
+[1, 4, 7]
    ```
+
+## <div id="2">2. 成员资格</div>
+
+> 成员资格：in
+
+```python
+LST = ['a', 'b', 'c']
+'a' in LST
+```
+
+## <div id="3">3. 长度，最小值和最大值</div>
+
+> len()  min()  max()
+
+```python
+number = [1, 2, 3, 4, 5, 6, 7]
+len(number)
+min(number)
+max(number)
+```
+
+## <div id="4">4. 函数list</div>
+
+> 将任何序列（而不仅仅是字符串）转换为列表：list   
+> 删除元素：del
+>
+```python
+a= ['h', 'e', 'l', 'l', 'o']
+del a[2]
+a
+['h', 'e', 'l', 'o']
+```
+
+> 用切片方法删除，插入，替换元素
+```python
+# 切片删除
+>>> a = list('hello')
+>>> a
+['h', 'e', 'l', 'l', 'o']
+>>> a[2:4]=[]
+>>> a
+['h', 'e', 'o']
+
+# 切片插入
+>>> a =[1,2,4,5]
+>>> a[2:2]=[3]
+>>> a
+[1, 2, 3, 4, 5]
+
+# 切片替换
+>>> a = list('Pear')
+>>> a
+['P', 'e', 'a', 'r']
+>>> a[1:]=list('ython')
+>>> a
+['P', 'y', 't', 'h', 'o', 'n']
+``` 
+
+>高级排序：加key
+```python
+>>> x = ['aardvark','aerate','abalone','aerate']
+>>> x.sort(key=len)
+>>> x
+['aerate', 'aerate', 'abalone', 'aardvark']
+
+---------
+>>> x = [4,6,2,1,7,9]
+>>> x.sort(reverse=True)
+>>> x
+[9, 7, 6, 4, 2, 1]
+```
