--- a/E05-条件和条件语句/E05_1.md
+++ b/E05-条件和条件语句/E05_1.md
@@ -10,3 +10,31 @@ Traceback (most recent call last):
   File "<stdin>", line 1, in <module>
 AssertionError: This is a assert message
 ```
+
+## 内置函数 
++ `enumerate`:返回两个值，序号，值
+```python
+>>> a=[1,2,3,4,5]
+>>> for i,j in enumerate(a):
+...     print(i,j)
+...
+0 1
+1 2
+2 3
+3 4
+4 5
+```
+
++ zip
+```python
+>>> a = [1, 2, 3, 4, 5]
+>>> b = ['a', 'b', 'c', 'd', 'e']
+>>> c = ['aa', 'bb', 'cc', 'dd', 'ee']
+>>> list(zip(a, b, c))
+[(1, 'a', 'aa'), (2, 'b', 'bb'), (3, 'c', 'cc'), (4, 'd', 'dd'), (5, 'e', 'ee')]
+>>> a = [1, 2, 3, 4, 5]
+>>> b = ['a', 'b', 'c', 'd', 'e']
+>>> c = ['aa', 'bb', 'cc', 'dd', 'ee']
+>>> list(zip(a, b))
+[(1, 'a'), (2, 'b'), (3, 'c'), (4, 'd'), (5, 'e')]
+```
